finalizado passo 3 e 4 de baixar e fazer upload
