# routes/api.php
@@ -4,6 +4,7 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Auth\AuthController;
 use App\Http\Controllers\SeleniumController;
+use App\Http\Controllers\PdfCsvConversionController;
 
 /*
 |--------------------------------------------------------------------------
@@ -38,5 +39,15 @@ Route::group(['middleware' => 'api'], function ($router) {
 });
 // 1. Acessar a página https://testpages.herokuapp.com/styled/tag/table.html e capturar todas as informações exibidas na tabela e armazenar em um banco de dados mysql
 Route::get('access-page', [SeleniumController::class, 'accessPageSave']);
+
 // 2. Preencher o formulário através do link https://testpages.herokuapp.com/styled/basic-html-form-test.html e retornar se preenchimento foi ok ou não. ( pode inventar as informações a serem preenchidas)
 Route::post('read-form', [SeleniumController::class, 'sendDataToForm']);
+
+// 3. Baixar o arquivo através do link https://testpages.herokuapp.com/styled/download/download.html pelo botão “Direct Link Download” e salvar no seu disco local e renomear o arquivo para “Teste TKS”
+Route::get('download', [SeleniumController::class, 'download']);
+
+//4. Realizar o upload do arquivo baixado no item 3 através do link https://testpages.herokuapp.com/styled/file-upload-test.html.
+Route::post('upload', [SeleniumController::class, 'uploadFile']);
+
+// LEITURA PDF.
+Route::get('convert-pdf-to-csv', [PdfCsvConversionController::class, 'convertPdfToCsv']);
