# storage/api-docs/api-docs.json
@@ -185,6 +185,50 @@
                 ]
             }
         },
+        "/api/reading": {
+            "get": {
+                "tags": [
+                    "Desafio"
+                ],
+                "summary": "reading file txt",
+                "description": "reading file textfile.txt",
+                "operationId": "readingFile",
+                "responses": {
+                    "200": {
+                        "description": "Successful"
+                    },
+                    "401": {
+                        "description": "User not authorized. Wrong login or password.",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Operation return error messages",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Sorry. Please try again"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/access-page": {
             "get": {
                 "tags": [
@@ -263,6 +307,76 @@
                 "responses": {
                     "200": {
                         "description": "Success Fill in the link form"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/download": {
+            "get": {
+                "tags": [
+                    "Desafio"
+                ],
+                "summary": "Download file txt",
+                "description": "Download file textfile.txt",
+                "operationId": "DownloadFile",
+                "responses": {
+                    "200": {
+                        "description": "Successful"
+                    },
+                    "401": {
+                        "description": "User not authorized. Wrong login or password.",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Operation return error messages",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Sorry. Please try again"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/upload": {
+            "post": {
+                "tags": [
+                    "Desafio"
+                ],
+                "summary": "Upload file",
+                "description": "Upload file and rename",
+                "operationId": "0d76db069a33b05082654d8573ebf1ab",
+                "responses": {
+                    "200": {
+                        "description": "Success upload file"
                     },
                     "400": {
                         "description": "Bad request"
